--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.68.2
 uvicorn==0.15.0
 
+
 pytest==6.2.5
 pytest-asyncio==0.14.0
 httpx==0.16.1
 asgi-lifespan==1.0.1
+pytest-mock==3.6.1
